--- a/index.html
+++ b/index.html
@@ -11,25 +11,43 @@
 </head>
 
 <body>
-
-  <header class="bird-box">
-      <div class="back-bird"></div>
-      <div class="logo"></div>
-      <div class="fore-bird"></div>
-  </header>
-
-   <div class="container">
-    <section class="content">
-        <article>
-            <h1>Clothing Store</h1>
-            <hr/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, expedita qui veritatis ratione error atque impedit, ipsa saepe quae praesentium eveniet commodi iusto facere ut, illum perferendis aut consequuntur fugit?</p>
-
-
-        </article>
-        <div style="height: 3000px"></div>
-    </section>
+    <div class="wrapper">
+        <nav class="navbar">
+            <ul class="navigation">
+               <h1 class="logo-text">Clothes.</h1>
+                <li class="nav-link"><a href='#'>about</a></li>
+                <li class="nav-link"><a href='#'>products</a></li>
+                <li class="nav-link"><a href='#'>where to buy</a></li>
+            </ul>
+        </nav>
     </div>
+        <header class="bird-box">
+            <div class="back-bird"></div>
+            <div class="logo"></div>
+            <div class="fore-bird"></div>
+        </header>
+
+
+        <section class="content">
+            <article>
+                <h1>Clothing Store</h1>
+                <hr/>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, expedita qui veritatis ratione error atque impedit, ipsa saepe quae praesentium eveniet commodi iusto facere ut, illum perferendis aut consequuntur fugit?</p>
+                <hr/>
+
+                <div class="large-window">
+                    <div class="word-wrapper">
+                        <h1 class="space">
+                        Space and shit.
+                    </h1>
+                    </div>
+                </div>
+
+
+            </article>
+            <div style="height: 3000px"></div>
+        </section>
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="js/functions.js"></script>
 </body>
