--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 
     <link rel="stylesheet" href="bower_components/skeleton/css/normalize.css">
     <link rel="stylesheet" href="bower_components/skeleton/css/skeleton.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <title></title>
 </head>
 
 <body>
-    <div class="wrapper">
+
         <nav class="navbar">
             <ul class="navigation">
-               <h1 class="logo-text">Clothes.</h1>
-                <li class="nav-link"><a href='#'>about</a></li>
-                <li class="nav-link"><a href='#'>products</a></li>
-                <li class="nav-link"><a href='#'>where to buy</a></li>
+                <h1 class="logo-text">Clothes.</h1>
+                <li class="nav-link"><a href='#'>About</a></li>
+                <li class="nav-link"><a href='#'>Products</a></li>
+                <li class="nav-link"><a href='#'>Where to buy</a></li>
             </ul>
         </nav>
-    </div>
+
         <header class="bird-box">
             <div class="back-bird"></div>
             <div class="logo"></div>
